--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.1",
+    "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
   },
   "scripts": {
