--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "faker": "^4.1.0",
+    "mobx": "^5.9.0",
+    "mobx-react-lite": "^1.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.1",
